Update index.html via editor

--- a/index.html
+++ b/index.html
@@ -51,7 +51,60 @@
             border: 1px solid rgba(255, 255, 255, 0.2);
         }
     </style>
-</head>
+
+  <script type="application/ld+json">
+  [
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "AI Automation Amsterdam",
+    "description": "De beste AI automatisering bureau in Amsterdam. Slimme werkstroom automatisering en AI-aangedreven oplossingen voor uw bedrijf.",
+    "email": "admin@dai.com",
+    "contactPoint": {
+      "@type": "ContactPoint",
+      "email": "admin@dai.com",
+      "contactType": "customer service"
+    }
+  },
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "AI Automation Amsterdam - Beste AI Automatisering Bureau",
+    "description": "AI Automation Amsterdam - De beste AI automatisering bureau in Amsterdam. Slimme werkstroom automatisering en AI-aangedreven oplossingen voor uw bedrijf."
+  },
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Veiligheid & Compliance",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Volledige naleving van GDPR, ISO en andere regelgeving"
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Integratie",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Naadloze integratie met uw bestaande systemen"
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Schaalbaar",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Groeit mee met uw bedrijf, van startup tot enterprise"
+        }
+      }
+    ]
+  }
+]
+  </script>
+  </head>
 <body class="bg-white text-[#1A1A1A]">
     <!-- Header Navigation -->
     <header class="sticky top-0 z-50 bg-white shadow-md">
